--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Ignore output files
+
+/figures/*
+!figures/README.md
+
+
+
+############################################
+# GitHub standard python ignores below
+############################################
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
