First merge - PK (#1)
* add figures dir

* add data dir

* add first analysis scripts

* add some directory structure to the README

---------

Co-authored-by: Pieter Keenan <pk530@p42wlfcj91.home>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Ignore output files
+
+/figures/*
+!figures/README.md
+
+/data/*
+!data/README.md
+
+
+############################################
+# GitHub standard python ignores below
+############################################
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
